fixed spacing issues

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -200,6 +200,7 @@
     padding: 0;
     min-height: 120px;
     display: flex;
+    flex-direction:column;
     align-items: center;
     justify-content: center;
   }
